syntax = "proto3";
import "listing.proto";
package staticdataservice;
option go_package="api";


message ListingId {
    int32 listingId = 1;
}


message ListingIds {
    repeated int32 listingIds = 1; 
}

message Listings {
   repeated model.Listing listings = 1;

}

message MatchParameters {
	string symbolMatch = 1;
	string nameMatch = 2;
}

service StaticDataService{
    rpc GetListingsMatching(MatchParameters) returns (Listings) {};
    rpc GetListing(ListingId) returns (model.Listing) {};
    rpc GetListings(ListingIds) returns (Listings) {};
} 


